# bitcoin-majority-hashrate-attack-simulation

./: LICENSE  README.md  pyproject.toml
btc_mining_simulation/: mining-agent.py  mining-controller.py  models.py
