[tool.poetry]
name = "btc-mining-simulation"
version = "0.1.0"
description = ""
authors = ["zpfvo"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
